// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarouselPagination integration tests is a snapshot with English localization 1`] = `
<div
  aria-label="Carousel pagination"
  class="flex py-1 gap-2 overflow-x-auto"
  role="group"
>
  <button
    aria-disabled="false"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 border-neutral-300 hover:border-neutral-400 active:border-neutral-500 dark:bg-dark-neutral-350 dark:hover:bg-dark-neutral-400 dark:active:bg-dark-neutral-500 dark:border-dark-neutral-350 dark:hover:border-dark-neutral-400 dark:active:border-dark-neutral-500 "
  />
  <button
    aria-disabled="false"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 border-neutral-300 hover:border-neutral-400 active:border-neutral-500 dark:bg-dark-neutral-350 dark:hover:bg-dark-neutral-400 dark:active:bg-dark-neutral-500 dark:border-dark-neutral-350 dark:hover:border-dark-neutral-400 dark:active:border-dark-neutral-500 "
  />
  <button
    aria-disabled="true"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 border-blue-600 hover:border-blue-700 active:border-blue-800 dark:border-blue-300 dark:hover:border-blue-400 dark:active:border-blue-500 bg-transparent "
  />
  <button
    aria-disabled="false"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 border-neutral-300 hover:border-neutral-400 active:border-neutral-500 dark:bg-dark-neutral-350 dark:hover:bg-dark-neutral-400 dark:active:bg-dark-neutral-500 dark:border-dark-neutral-350 dark:hover:border-dark-neutral-400 dark:active:border-dark-neutral-500 "
  />
  <button
    aria-disabled="false"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 border-neutral-300 hover:border-neutral-400 active:border-neutral-500 dark:bg-dark-neutral-350 dark:hover:bg-dark-neutral-400 dark:active:bg-dark-neutral-500 dark:border-dark-neutral-350 dark:hover:border-dark-neutral-400 dark:active:border-dark-neutral-500 "
  />
  <button
    aria-disabled="false"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 border-neutral-300 hover:border-neutral-400 active:border-neutral-500 dark:bg-dark-neutral-350 dark:hover:bg-dark-neutral-400 dark:active:bg-dark-neutral-500 dark:border-dark-neutral-350 dark:hover:border-dark-neutral-400 dark:active:border-dark-neutral-500 "
  />
  <button
    aria-disabled="false"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 border-neutral-300 hover:border-neutral-400 active:border-neutral-500 dark:bg-dark-neutral-350 dark:hover:bg-dark-neutral-400 dark:active:bg-dark-neutral-500 dark:border-dark-neutral-350 dark:hover:border-dark-neutral-400 dark:active:border-dark-neutral-500 "
  />
  <button
    aria-disabled="false"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 border-neutral-300 hover:border-neutral-400 active:border-neutral-500 dark:bg-dark-neutral-350 dark:hover:bg-dark-neutral-400 dark:active:bg-dark-neutral-500 dark:border-dark-neutral-350 dark:hover:border-dark-neutral-400 dark:active:border-dark-neutral-500 "
  />
</div>
`;

exports[`CarouselPagination integration tests is a snapshot with Russian localization 1`] = `
<div
  aria-label="Пагинация слайдера"
  class="flex py-1 gap-2 overflow-x-auto"
  role="group"
>
  <button
    aria-disabled="false"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 border-neutral-300 hover:border-neutral-400 active:border-neutral-500 dark:bg-dark-neutral-350 dark:hover:bg-dark-neutral-400 dark:active:bg-dark-neutral-500 dark:border-dark-neutral-350 dark:hover:border-dark-neutral-400 dark:active:border-dark-neutral-500 "
  />
  <button
    aria-disabled="false"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 border-neutral-300 hover:border-neutral-400 active:border-neutral-500 dark:bg-dark-neutral-350 dark:hover:bg-dark-neutral-400 dark:active:bg-dark-neutral-500 dark:border-dark-neutral-350 dark:hover:border-dark-neutral-400 dark:active:border-dark-neutral-500 "
  />
  <button
    aria-disabled="true"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 border-blue-600 hover:border-blue-700 active:border-blue-800 dark:border-blue-300 dark:hover:border-blue-400 dark:active:border-blue-500 bg-transparent "
  />
  <button
    aria-disabled="false"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 border-neutral-300 hover:border-neutral-400 active:border-neutral-500 dark:bg-dark-neutral-350 dark:hover:bg-dark-neutral-400 dark:active:bg-dark-neutral-500 dark:border-dark-neutral-350 dark:hover:border-dark-neutral-400 dark:active:border-dark-neutral-500 "
  />
  <button
    aria-disabled="false"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 border-neutral-300 hover:border-neutral-400 active:border-neutral-500 dark:bg-dark-neutral-350 dark:hover:bg-dark-neutral-400 dark:active:bg-dark-neutral-500 dark:border-dark-neutral-350 dark:hover:border-dark-neutral-400 dark:active:border-dark-neutral-500 "
  />
  <button
    aria-disabled="false"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 border-neutral-300 hover:border-neutral-400 active:border-neutral-500 dark:bg-dark-neutral-350 dark:hover:bg-dark-neutral-400 dark:active:bg-dark-neutral-500 dark:border-dark-neutral-350 dark:hover:border-dark-neutral-400 dark:active:border-dark-neutral-500 "
  />
  <button
    aria-disabled="false"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 border-neutral-300 hover:border-neutral-400 active:border-neutral-500 dark:bg-dark-neutral-350 dark:hover:bg-dark-neutral-400 dark:active:bg-dark-neutral-500 dark:border-dark-neutral-350 dark:hover:border-dark-neutral-400 dark:active:border-dark-neutral-500 "
  />
  <button
    aria-disabled="false"
    class="w-[0.9375rem] h-[0.9375rem] sm:w-[0.625rem] sm:h-[0.625rem] shrink-0 border-2 rounded-full transition-colors duration-150 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 border-neutral-300 hover:border-neutral-400 active:border-neutral-500 dark:bg-dark-neutral-350 dark:hover:bg-dark-neutral-400 dark:active:bg-dark-neutral-500 dark:border-dark-neutral-350 dark:hover:border-dark-neutral-400 dark:active:border-dark-neutral-500 "
  />
</div>
`;

exports[`CarouselPagination tests is a basic snapshot 1`] = `
<div
  class="w-full flex justify-center items-center text-center text-200 text-neutral-1000 dark:text-dark-neutral-1000 transition-colors duration-150 h-1 bg-neutral-300 dark:bg-dark-neutral-300 "
  data-testid="test-carousel-pagination"
>
  <span
    class="bg-blue-700 dark:bg-blue-300 w-full h-full scale-y-100 origin-top-left transition-[transform,background-color] duration-150"
    style="transform: scaleX(0.375);"
  />
</div>
`;
